--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="/src/css/animate.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="navbar-block ">
           <div class="navbar__logo wow fadeInDown" data-wow-delay="0s" data-wow-duration="1s">
-            <img src="/src/img/Asset 2_1.png" alt="Логотип" />
+            <img src="img/Asset 2_1.png" alt="Логотип" />
           </div>
           <!-- /.navbar__logo -->
           <div class="navbar__info">
@@ -56,13 +56,13 @@
               <ul class="hero-list">
                 <li class="hero-list__item">
                   <div class="hero-list__image">
-                    <img src="/src/img/Asset 3.png" alt="Часы" />
+                    <img src="img/Asset 3.png" alt="Часы" />
                   </div>
                   <span class="hero-list__text">Точно соблюдаем сроки</span>
                 </li>
                 <li class="hero-list__item">
                   <div class="hero-list__image">
-                    <img src="/src/img/Asset 4.png" alt="Кулькулятор" />
+                    <img src="img/Asset 4.png" alt="Кулькулятор" />
                   </div>
                   <span class="hero-list__text"
                     >Рассчитаем смету на работы и материалы в день обращения
@@ -70,7 +70,7 @@
                 </li>
                 <li class="hero-list__item">
                   <div class="hero-list__image">
-                    <img src="/src/img/Asset 5.png" alt="Краски" />
+                    <img src="img/Asset 5.png" alt="Краски" />
                   </div>
                   <span class="hero-list__text"
                     >Предложим более 100 вариантов исполнения дизайна Вашего
@@ -81,7 +81,7 @@
             </div>
             <!-- /.hero-text -->
             <div class="hero-image  wow fadeInRight" data-wow-delay="0.5s" data-wow-duration="2s">
-              <img src="/src/img/Asset 1.png " alt="План Квартиры" />
+              <img src="img/Asset 1.png " alt="План Квартиры" />
             </div>
             <!-- /.hero-image -->
           </div>
@@ -265,9 +265,9 @@
       integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
       crossorigin="anonymous"
     ></script>
-    <script src="js/modal.js"></script>
-    <script src="js/btn.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js\modal.js"></script>
+    <script src="js\btn.js"></script>
+    <script src="js\slick.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
       new WOW().init();
