--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="/css/animate.css">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="navbar-block ">
           <div class="navbar__logo wow fadeInDown" data-wow-delay="0s" data-wow-duration="1s">
-            <img src="img/Asset 2_1.png" alt="Логотип" />
+            <img src="./img/Asset 2_1.png" alt="Логотип" />
           </div>
           <!-- /.navbar__logo -->
           <div class="navbar__info">
@@ -56,13 +56,13 @@
               <ul class="hero-list">
                 <li class="hero-list__item">
                   <div class="hero-list__image">
-                    <img src="img/Asset 3.png" alt="Часы" />
+                    <img src="./img/Asset 3.png" alt="Часы" />
                   </div>
                   <span class="hero-list__text">Точно соблюдаем сроки</span>
                 </li>
                 <li class="hero-list__item">
                   <div class="hero-list__image">
-                    <img src="img/Asset 4.png" alt="Кулькулятор" />
+                    <img src="./img/Asset 4.png" alt="Кулькулятор" />
                   </div>
                   <span class="hero-list__text"
                     >Рассчитаем смету на работы и материалы в день обращения
@@ -70,7 +70,7 @@
                 </li>
                 <li class="hero-list__item">
                   <div class="hero-list__image">
-                    <img src="img/Asset 5.png" alt="Краски" />
+                    <img src="./img/Asset 5.png" alt="Краски" />
                   </div>
                   <span class="hero-list__text"
                     >Предложим более 100 вариантов исполнения дизайна Вашего
@@ -81,7 +81,7 @@
             </div>
             <!-- /.hero-text -->
             <div class="hero-image  wow fadeInRight" data-wow-delay="0.5s" data-wow-duration="2s">
-              <img src="img/Asset 1.png " alt="План Квартиры" />
+              <img src="./img/Asset 1.png " alt="План Квартиры" />
             </div>
             <!-- /.hero-image -->
           </div>
@@ -129,30 +129,30 @@
           </h2>
           <div class="slider">
             <div class="slider__item wow fadeInLeft" data-wow-delay="0.5s" data-wow-duration="1s">
-              <img class="slider__image" src="img/slaider-1.jpg" alt="" />
+              <img class="slider__image" src="./img/slaider-1.jpg" alt="" />
             </div>
             <div class="slider__item wow fadeInLeft" data-wow-delay="0.3s" data-wow-duration="1s">
-              <img class="slider__image" src="img/slaider-2.jpg" alt="" />
+              <img class="slider__image" src="./img/slaider-2.jpg" alt="" />
             </div>
             <div class="slider__item wow fadeInLeft" data-wow-delay="0.1s" data-wow-duration="1s">
-              <img class="slider__image" src="img/slaider-3.jpg" alt="" />
+              <img class="slider__image" src="./img/slaider-3.jpg" alt="" />
             </div>
             <div class="slider__item">
-              <img class="slider__image" src="img/slaider-1.jpg" alt="" />
+              <img class="slider__image" src="./img/slaider-1.jpg" alt="" />
             </div>
             <div class="slider__item">
-              <img class="slider__image" src="img/slaider-2.jpg" alt="" />
+              <img class="slider__image" src="./img/slaider-2.jpg" alt="" />
             </div>
             <div class="slider__item">
-              <img class="slider__image" src="img/slaider-3.jpg" alt="" />
+              <img class="slider__image" src="./img/slaider-3.jpg" alt="" />
             </div>
           </div>
           <div class="arrows portfolio__arrows">
             <div class="arrows__left">
-              <img src="img/arrow-left.png" alt="" />
+              <img src="./img/arrow-left.png" alt="" />
             </div>
             <div class="arrows__right">
-              <img src="img/arrow-right.png" alt="" />
+              <img src="./img/arrow-right.png" alt="" />
             </div>
           </div>
 
@@ -171,7 +171,7 @@
           <!-- /.section-subtitle price__subtitle -->
           <div class="cards">
             <div class="card price__card wow fadeIn" data-wow-delay="0.3s" data-wow-duration="2s">
-              <div class="card__image"><img class="card-img" src="img/price/badroom.png" alt=""></div>
+              <div class="card__image"><img class="card-img" src="./img/price/badroom.png" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
@@ -183,7 +183,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeIn" data-wow-delay="0.6s" data-wow-duration="2s">
-              <div class="card__image"><img class="card-img" src="img/price/room.png" alt=""></div>
+              <div class="card__image"><img class="card-img" src="./img/price/room.png" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт комнат и квартир</h4>
@@ -195,7 +195,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeIn" data-wow-delay="0.9s" data-wow-duration="2s">
-              <div class="card__image"><img class="card-img" src="img/price/office.png" alt=""></div>
+              <div class="card__image"><img class="card-img" src="./img/price/office.png" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Отделка офисных помещений</h4>
@@ -207,7 +207,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeIn" data-wow-delay="0.3s" data-wow-duration="2s">
-              <div class="card__image"><img class="card-img" src="img/price/hall.png" alt=""></div>
+              <div class="card__image"><img class="card-img" src="./img/price/hall.png" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт в новостройках</h4>
@@ -219,7 +219,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeIn" data-wow-delay="0.6s" data-wow-duration="2s">
-              <div class="card__image"><img class="card-img" src="img/price/kitchen.png" alt=""></div>
+              <div class="card__image"><img class="card-img" src="./img/price/kitchen.png" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт кухонь</h4>
@@ -231,7 +231,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeIn" data-wow-delay="0.9s" data-wow-duration="2s">
-              <div class="card__image"><img class="card-img" src="img/price/house.png" alt=""></div>
+              <div class="card__image"><img class="card-img" src="./img/price/house.png" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт дач и коттеджей</h4>
@@ -265,10 +265,10 @@
       integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
       crossorigin="anonymous"
     ></script>
-    <script src="js\modal.js"></script>
-    <script src="js\btn.js"></script>
-    <script src="js\slick.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/btn.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/wow.min.js"></script>
     <script>
       new WOW().init();
       $(document).ready(function () {
